tests/errors/001-unknown-characters.e
£
¬
{
    "code": "E0001",
    "line": 1,
    "column": 1,
    "message": "Unknown character `£` found"
}
¬
21n
¬
{
    "code": "E0002",
    "line": 1,
    "column": 3,
    "message": "Malformed integer literal `21n`"
}
